# ml-stock-forecasting

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: stock_combined.csv
data/raw/: stock_tweets.csv  stock_yfinance_data.csv
src/: data_morphosis.py  lgb_classification.py  lgb_regressor.py  lstm_classification.py  main.py  processing_roberta.py
