[tool.poetry]
name = "stock-forecasting"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
transformers = "^4.40.0"
polars = "^0.20.21"
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
docformatter = "^1.7.5"
pre-commit = "^3.7.0"
spacy = "^3.7.4"
torch = "^2.2.2"
tqdm = "^4.66.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
loguru = "^0.7.2"
lightgbm = "^4.3.0"
tensorflow = "^2.16.1"
keras = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
